<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/YOUR_PROFILE" />
        <item
            android:id="@+id/menu_your_hobby"
            android:icon="@drawable/ic_hobby"
            android:title="@string/YOUR_HOBBIES" />
        <item
            android:id="@+id/menu_message"
            android:icon="@drawable/ic_message"
            android:title="@string/MESSAGES" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/menu_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
