<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainImageDetailActivity">
    <ImageView
        android:id="@+id/imageViewMainImageDetail"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="400dp" />
    <TextView
        android:id="@+id/textViewMainImageDetail"
        android:text="@string/main_image_detail_asking"
        android:textSize="20sp"
        android:padding="5dp"
        android:textColor="#8147ce"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="70dp" />
    <android.support.constraint.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCancelMainImageDetail"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="76dp"
            android:layout_marginStart="76dp"
            android:background="@drawable/custom_button_border_grey"
            android:gravity="center"
            android:text="@string/CANCEL"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonOkMainImageDetail"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/custom_button_border_purple"
            android:gravity="center"
            android:text="@string/OK"
            android:textColor="#8147ce"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/buttonCancelMainImageDetail"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>